[workspace]
members = [
    "crates/ds/dsu",
    "crates/ds/segment_tree/segment_tree",
    "crates/traits/monoid",
    "crates/traits/numeric",
    "crates/util/monoid_util",
    "verify/library_checker/data_structure/unionfind"
, "crates/modint", "verify/library_checker/data_structure/point_set_range_composite", "crates/ds/fenwick_tree", "verify/library_checker/data_structure/point_add_range_sum/verify_segment_tree", "verify/library_checker/data_structure/point_add_range_sum/verify_fenwick_tree"]
