[workspace]
members = [
    "crates/ds/dsu",
    "crates/ds/segment_tree/segment_tree",
    "crates/traits/monoid",
    "crates/traits/numeric",
    "crates/util/monoid_util",
    "verify/library_checker/data_structure/unionfind"
, "crates/modint", "verify/library_checker/data_structure/point_set_range_composite", "crates/ds/fenwick_tree", "verify/library_checker/data_structure/point_add_range_sum/verify_segment_tree", "verify/library_checker/data_structure/point_add_range_sum/verify_fenwick_tree", "crates/misc/cumulative_sum_2d", "verify/aoj/aoj2426", "crates/misc/compress", "crates/misc/rle", "verify/yukicoder/yuki1469/yuki1469_1", "crates/ds/segment_tree/dynamic_segment_tree", "verify/yukicoder/yuki789/yuki789_1", "verify/library_checker/data_structure/point_set_range_composite_large_array/verify_dynamic_segment_tree"]
