[package]
name = "point_set_range_composite"
version = "0.1.0"
edition = "2021"

[dependencies]
modint = { version = "0.1.0", path = "../../../../crates/modint" }
monoid = { version = "0.1.0", path = "../../../../crates/traits/monoid" }
proconio = { version = "0.5.0", features = ["derive"] }
segment_tree = { version = "0.1.0", path = "../../../../crates/ds/segment_tree/segment_tree" }
