[package]
name = "vertex_add_subtree_sum"
version = "0.1.0"
edition = "2021"

[dependencies]
fenwick_tree = { version = "0.1.0", path = "../../../../crates/ds/fenwick_tree" }
graph = { version = "0.1.0", path = "../../../../crates/graph/graph" }
heavy_light_decomposition = { version = "0.1.0", path = "../../../../crates/graph/heavy_light_decomposition" }
proconio = { version = "0.5.0", features = ["derive"] }
