[package]
name = "vertex_set_path_composite"
version = "0.1.0"
edition = "2024"

[dependencies]
graph = { version = "0.1.0", path = "../../../../crates/graph/graph" }
heavy_light_decomposition = { version = "0.1.0", path = "../../../../crates/graph/heavy_light_decomposition" }
modint = { version = "0.1.0", path = "../../../../crates/modint" }
monoid = { version = "0.1.0", path = "../../../../crates/traits/monoid" }
proconio = { version = "0.5.0", features = ["derive"] }
segment_tree = { version = "0.1.0", path = "../../../../crates/ds/segment_tree/segment_tree" }
