[package]
name = "yuki789_1"
version = "0.1.0"
edition = "2021"

[dependencies]
dynamic_segment_tree = { version = "0.1.0", path = "../../../../crates/ds/segment_tree/dynamic_segment_tree" }
monoid = { version = "0.1.0", path = "../../../../crates/traits/monoid" }
proconio = { version = "0.5.0", features = ["derive"] }
